--- a/config/config.toml
+++ b/config/config.toml
@@ -1,25 +1,30 @@
 [general_settings]
 remind_before_launch_mins = 1500
-refresh_time_seconds = 30
 
-[email]
-send_as_text = true  # formats the email as a text message instead
+# how many hours before launch until you add the launch in the begin day report
+launch_report_hours = 96
+
+refresh_time_seconds = 30
 
 [email.before_launch_email]
 send_before_launch_email = true
 
-subject = "Rocket Launch Soon!"
+subject = "Launch Soon!"
 
 email = """
-A {provider} {vehicle} will launch in {remind_before_launch_mins} minutes, launching on pad {launch_pad} at {launch_site}.
+A {provider} {vehicle} will launch in {remind_before_launch_mins} mins at pad {launch_pad}, {launch_site}.
+
+Data by RocketLaunch.live
 """
 
 [email.beginning_of_day_email]
 send_beginning_of_day_email = true
 send_time = 09:30:00
 
-subject = "Rocket Launch Today!"
+subject = "Upcoming Launch!"
 
 email = """
-A {provider} {vehicle} will launch the {mission} mission at {launch_time}. It will launch on pad {launch_pad} at {launch_site}.
+A {provider} {vehicle} will launch at {launch_time} at pad {launch_pad} at {launch_site}.
+
+Data by RocketLaunch.live
 """
