--- a/config/config.toml
+++ b/config/config.toml
@@ -19,6 +19,9 @@ Data by RocketLaunch.live
 
 [email.beginning_of_day_email]
 send_beginning_of_day_email = true
+
+# To prevent skipping sending the daily notification, do not set the send time a few minutes before or after midnight.
+# To be safe, keep it 30 minutes away from midnight minimum.
 send_time = 09:30:00
 
 subject = "Upcoming Launch!"
