--- a/config/config.toml
+++ b/config/config.toml
@@ -10,7 +10,7 @@ refresh_time_seconds = 30
 subject = "Launch Soon!"
 
 email = """
-A {provider} {vehicle} will launch in {remind_before_launch_mins} mins at pad {launch_pad}, {launch_site}.
+A {provider} {vehicle} will launch in {remind_before_launch_mins} mins at pad {launch_pad}, {launch_site}
 
 Data by RocketLaunch.live
 """
@@ -23,7 +23,7 @@ send_time = 09:30:00
 subject = "Upcoming Launch!"
 
 email = """
-A {provider} {vehicle} will launch at {launch_time} at pad {launch_pad} at {launch_site}.
+A {provider} {vehicle} will launch at {launch_time} at pad {launch_pad} at {launch_site}
 
 Data by RocketLaunch.live
 """
