--- a/config/config.toml
+++ b/config/config.toml
@@ -6,6 +6,13 @@ launch_report_hours = 24
 
 refresh_time_seconds = 30
 
+
+# Whether the program should exit at the designated time
+should_exit = true
+# The time at which the program exits
+# Set this to before email.beginning_of_day_email.send_time to avoid sending the daily report twice
+exit_time = 04:00:00
+
 [email.before_launch_email]
 subject = "Launch Soon!"
 
