--- a/config/config.toml
+++ b/config/config.toml
@@ -10,10 +10,10 @@ refresh_time_seconds = 30
 # Whether the program should exit at the designated time
 should_exit = true
 # The time at which the program exits
-# Set this to before reminder.daily_reminder.send_time to avoid sending the daily report twice
+# Set this to before reminder.daily.send_time to avoid sending the daily report twice
 exit_time = 04:00:00
 
-[reminders.before_launch_reminder]
+[reminders.prelaunch]
 subject = "Launch Soon!"
 
 message = """
@@ -22,7 +22,7 @@ A {provider} {vehicle} will launch in {remind_before_launch_mins} mins at pad {l
 Data by RocketLaunch.live
 """
 
-[reminders.daily_reminder]
+[reminders.daily]
 # To prevent skipping sending the daily notification, do not set the send time a few minutes before or after midnight.
 # To be safe, keep it 30 minutes away from midnight minimum.
 send_time = 09:30:00
