--- a/config/config.toml
+++ b/config/config.toml
@@ -16,7 +16,7 @@ mins_before_launch = 15
 subject = "Launch Soon!"
 
 message = """
-A {provider} {vehicle} will launch in {remind_before_launch_mins} mins at pad {launch_pad}, {launch_site}
+A {provider} {vehicle} will launch in {remind_before_launch_mins} mins on pad {launch_pad}, {launch_site}
 
 Data by RocketLaunch.live
 """
@@ -32,7 +32,7 @@ send_time = 09:30:00
 subject = "Launch Today!"
 
 message = """
-A {provider} {vehicle} will launch at {launch_time} at pad {launch_pad} at {launch_site}
+A {provider} {vehicle} will launch at {launch_time} on pad {launch_pad}, {launch_site}
 
 Data by RocketLaunch.live
 """
