--- a/config/config.toml
+++ b/config/config.toml
@@ -21,7 +21,6 @@ exit_time = 04:00:00
 mins_before_launch = 15
 
 subject = "Launch Soon"
-
 message = """
 A {provider} {vehicle} will launch in {remind_before_launch_mins} mins on pad {launch_pad}, {launch_site}
 
@@ -36,9 +35,16 @@ hours_before_launch = 24
 send_time = 09:30:00
 
 subject = "Launch Upcoming"
-
 message = """
 A {provider} {vehicle} will launch at {launch_time} on pad {launch_pad}, {launch_site}
 
 Data by RocketLaunch.live
 """
+
+[subscription.subscribe]
+subject = "Subscribed"
+message = "You subscribed to Rocket Launch Reminder! You will receive daily alerts and reminders 15 mins before launch."
+
+[subscription.unsubscribe]
+subject = "Unsubscribed"
+message = "You unsubscribed from Rocket Launch Reminder. You will no longer receive reminders."
